@@ -1,2 +1,3 @@
 v0.1
 - It's alive
+- Added interface
